[project]
name = "fo76-dumps"
version = "4.4.0"
authors = [{name = "Florine W. Dekker"}]
description = "Data dumps of Fallout 76 game files"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas==3.0.2",
    "pefile==2024.8.26",
]
classifiers = ["Private :: Do Not Upload"]

[dependency-groups]
dev = [
    "black==26.3.1",
]

[tool.black]
line-length = 120
force-exclude = "config_default.py"
